--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,36 +65,44 @@ h5{
    background-color: #d5f1ebb4;
    text-align: center;
 }
-.dcontainer{
+.b-container{
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
   width: 37em;
 }
+/* Css for patientdashboard */
 .patient_main{
-  padding-top: 10px;
+  /* padding-top: 10px; */
   overflow: visible;
   padding-bottom: 10px;
   text-align: center;
+  
+}
+
+.col-sm-3{
+  background-color: rgb(225, 250, 250);
+  padding-bottom: 5px;
+  height: 700px;
+  position: fixed;
+  text-align: left;
+  padding-top: 10px;
+  color: aliceblue;
+  /* margin-right: 10px; */
+}
+
+.navbar a:hover{
+ color: gray;
+}
+.navbar{ 
+  background-color:#0080FF;
+  color: black;
+  padding-left: 10px;
+  /* margin-bottom: 2rem; */
 
 }
-.logout{
-  text-align: right;
-  padding-right: 10px;
-}
-.logout ul a{
-  background-color:honeydew;
-  color:black;
-  display:ruby-base-container;
-  height:150px;
-  border-radius: 5px;
-  box-shadow: 5px ,10px,30px rgba(150,150,190,4);
-}
-.PatientDetails{
-  margin-left: auto;
-  margin-right: auto;
-  width: 60ex;
-  padding-top: 10px;
+.nav-link{
+  color: black;
 }
 .Details{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -103,46 +111,22 @@ h5{
   padding-top: 10px;
   text-align: left;
   padding-left:20px;
-  padding-right: 10px;
+  /* padding-right: 10px; */
    border-radius: 10px;
-   background-color: #d5f1ebb4;
+   /* background-color: #d5f1ebb4; */
 }
-.Access{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  border-radius: 10px;
-  line-height: 40px;
-  padding-top: 10px;
-  padding-left:10px;
-  padding-right: 10px;
-   border-radius: 10px;
-   background-color: #d5f1ebb4;
-}
-.Access h6{
-  line-height: 15px;
-}
-.ReportUpload{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  border-radius: 10px;
-  line-height: 40px;
-  padding-top: 10px;
-  padding-left:50px;
-   border-radius: 10px;
-   background-color: #d5f1ebb4;
+.Details h2{
+  text-align: center;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.b-container{
-  overflow: hidden;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50em;
-}
-.Reportupload{
-  line-height: 45px;
-  margin: 3px;
-  height: 200px;
-  border-radius: 10px;
-  background-color: #d5f1ebb4;
-  text-align: center;
+.ReportUpload{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  line-height: 35px;
+  padding-top: 30px;
+  /* padding-left:20px; */
+   border-radius: 10px;
+   /* background-color: #d5f1ebb4; */
 }
  input{
   height: 30px;
@@ -154,32 +138,33 @@ h5{
 }
 Button{
   height: 35px;
-  width: 70px;
+  /* width: 70px; */
+}
+.card{
+  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-left: 20px;
+  text-align: left;
+  width: 520;
+
+}
+.upload{
+  padding-top: 10px;
 }
 .upload input{
   width: 500px;
   padding-right: 10px;
   border-radius: 3px;
-  height: 49px;
+  height: 42px;
   margin-bottom: auto;
   border-color:wheat;
-  background-color:rgb(241, 239, 233)
+  background-color:rgb(241, 239, 233);
 }
 .upload input:hover{
   background-color: cadetblue;
 }
 
-.accessreport{
-  line-height: 45px;
-  margin: 3px;
-  height: 200px;
-  border-radius: 10px;
-  background-color: #d5f1ebb4;
-  text-align: center;
-}
-.nav-tabs .nav-link:hover{
-  color:gray;
-}
+
 .Report{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   border-radius: 10px;
