--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,6 +56,11 @@ h5{
   /* position: absolute; */
   padding-left: 10px;
 }
+/* .Patient label::after{
+  content: "*";
+  color: red;
+
+} */
 .Doctor{
   line-height: 40px;
    /* margin: 3px; */
@@ -97,7 +102,7 @@ h5{
 .navbar{ 
   background-color:#0080FF;
   color: black;
-  padding-left: 10px;
+  
   /* margin-bottom: 2rem; */
 
 }
@@ -179,4 +184,7 @@ Button{
 .Report h2{
   text-align: center;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+ul{
+  list-style:none;
 }
