--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -120,7 +120,7 @@ h5{
    border-radius: 10px;
    /* background-color: #d5f1ebb4; */
 }
-.Details h2{
+ h2{
   text-align: center;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
