--- a/frontend/src/pages/general.css
+++ b/frontend/src/pages/general.css
@@ -44,6 +44,7 @@
         border-color:#0080FF;
         border-width: 5px;
         border-radius: 1rem;
+        text-align: left;
     }
 
     .card .details {
