--- a/frontend/src/pages/patient.css
+++ b/frontend/src/pages/patient.css
@@ -1,3 +1,4 @@
+
 .Main{
   width:100%;
   position: relative;
@@ -19,11 +20,10 @@
 .Register{  
   position: relative;
   background: no-repeat; 
-  text-align: center;
+ text-align: center;
   background-size:cover;
   overflow: visible;
-font-family:Verdana, Geneva, Tahoma, sans-serif;
-padding-top: 10px;
+font-family:Verdana, Geneva, Tahoma, sans-serif
 
 }
 .heading{
@@ -36,10 +36,12 @@ padding-top: 10px;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  border-radius: 10px;
  line-height: 40px;
- border-radius: 10px;
- background-color: #d5f1ebb4;
- text-align: left;
- width: 50rem;
+   /* margin: 3px; */
+   border-radius: 10px;
+   background-color: #d5f1ebb4;
+   text-align: left;
+   /* padding-bottom: 10px; */
+   width: 50rem;
 }
 
 .Patient input{
@@ -48,13 +50,26 @@ padding-top: 10px;
 .Patient form select{
   padding-left: 10px;
   padding-right: 10px;
-  /* box-sizing:border-box; */
+  box-sizing:border-box;
 }
- 
-
-
+/* h5{
+  /* color: red; */
+  /* font-size: 10px; */
+/* } */ */
+.Patient Button{
+  /* position: absolute; */
+  padding: 10%;
+  margin: 20px;
+}
+/* .Patient label::after{
+  content: "*";
+  color: red;
+} */
 .Doctor{
   line-height: 40px;
+   /* margin: 3px; */
+   /* padding-left: 5px; */
+   
    border-radius: 10px;
    background-color: #d5f1ebb4;
    text-align: left;
@@ -62,17 +77,12 @@ padding-top: 10px;
 }
 
 .login{
-  line-height: 40px;
-  border-radius: 10px;
-  background-color: #d5f1ebb4;
-align-items: center;
-margin-left: auto;
-margin-right: auto;
-width: 45em;
-
+    background-color:#d5f1ebb4 ;
 }
 .b-container{
-   display: flex;
+  /* overflow: hidden; */
+ 
+  display: flex;
   flex-direction: row;
   justify-content: space-around;
   flex-flow: wrap;
@@ -85,37 +95,37 @@ width: 45em;
   overflow: visible;
   padding-bottom: 10px;
   text-align: center;
+ 
+  
 }
 
-
-.col-sm-3{
-  /* background-color: #c4f5fa; */
-  /* rgb(3, 197, 245); */
+/* .col-sm-3{
+  background-color: rgb(225, 250, 250);
   padding-bottom: 5px;
   height: 700px;
-  position: relative;
+  position: fixed;
   text-align: left;
   padding-top: 10px;
-  padding-bottom: 10px;
-  /* color: rgb(21, 142, 248); */
-  
-} 
+  color: aliceblue;
+  /* margin-right: 10px; */
+/* }  */
 
-/* .navbar a:hover{
- color: rgb(247, 231, 231);
+.navbar a:hover{
+ color: gray;
 }
-.Navbar Button :hover{
-  color: rgb(248, 8, 8);
-} */
 
 
 .Details{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   border-radius: 10px;
-  line-height: 35px;
+  line-height: 40px;
   padding-top: 10px;
   text-align: center;
   padding-left:20px;
+  /* margin-bottom: 20px; */
+  /* padding-right: 10px; */
+   border-radius: 10px;
+   /* background-color: #d5f1ebb4; */
 }
 
 
@@ -128,8 +138,8 @@ width: 45em;
    /* background-color: #d5f1ebb4; */
 }
  input{
-  height: 25px;
-  font-size: 19px;
+  height: 30px;
+  font-size: 20px;
   font-family: 'Courier New', Courier, monospace;
   width:70%;
   border-radius: 5px;
@@ -140,6 +150,7 @@ width: 45em;
   padding-top: 10px;
 }
 .upload input{
+  width: 500px;
   padding-right: 10px;
   border-radius: 3px;
   height: 42px;
@@ -173,11 +184,9 @@ ul{
 
 .meDossier{
   height: 80px;
-  width: 160px;
-  /* background-color:rgb(39, 25, 240); */
-   /* #0080FF; */
+  width: 140px;
+  background-color: #0080FF;
   border-radius: 50%;
   display: inline-block;
-  padding: 1%;
-  
+  padding: 2%;
 }
